Revamp for laptop (I forgot to push the rest of my desktop dots)

--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -1,6 +1,6 @@
 unbind C-b
-set -g prefix C-Space
-bind C-Space send-prefix
+set -g prefix C-b
+bind C-b send-prefix
 
 setw -g mode-keys vi
 setw -g status-keys vi
