--- a/hosts/shared/dotfiles/coc-settings.json
+++ b/hosts/shared/dotfiles/coc-settings.json
@@ -11,6 +11,13 @@
                         "args": ["--background-index"],
                         "rootPatterns": ["compile_flags.txt", "compile_commands.json", ".vim/", ".git/", ".hg/"],
                         "filetypes": ["c", "cpp", "objc", "objcpp"]
+                },
+                "metals": {
+                        "command": "metals-vim",
+                        "rootPatterns": ["build.sbt"],
+                        "filetypes": ["scala", "sbt"]
                 }
         }
-}
+        "diagnostic-languageserver.filetypes": {
+                "sh": "shellcheck"
+        }
