--- a/home/coc-settings.json
+++ b/home/coc-settings.json
@@ -22,6 +22,11 @@
                         "args": ["--lsp"],
                         "rootPatterns": ["*.cabal", "stack.yaml", "cabal.project", "package.yaml", "hie.yaml"],
                         "filetypes": ["haskell", "lhaskell"]
+                },
+                "rust": {
+                        "command": "rust-analyzer",
+                        "filetypes": ["rust"],
+                        "rootPatterns": ["Cargo.toml"]
                 }
         },
         "diagnostic-languageserver.filetypes": {
