--- a/home/tmux.conf
+++ b/home/tmux.conf
@@ -4,3 +4,6 @@ bind C-b send-prefix
 
 setw -g mode-keys vi
 setw -g status-keys vi
+
+bind-key C-h swap-window -t -1
+bind-key C-l swap-window -t +1
