--- a/home/alacritty.yml
+++ b/home/alacritty.yml
@@ -3,17 +3,17 @@ font:
   # The normal (roman) font face to use.
   # Style can be specified to pick a specific face.
   normal:
-    family: Hack
+    family: "FiraCode Nerd Font"
     style: Regular
 
   # The bold font face
   bold:
-    family: Hack
+    family: "FiraCode Nerd Font"
     style: Bold
 
   # The italic font face
   italic:
-    family: Hack
+    family: "FiraCode Nerd Font"
     style: "Bold Italic"
 
   # Point size of the font
